サーバーへデプロイ完了 README等を記載

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "LOCALE": "en",
-  "APP_TITLE": "HTTP Cats",
+  "APP_TITLE": "HTTP Cats version Omochi",
   "USAGE_TITLE": "Usage",
   "USAGE_PARAM": "status_code",
   "USAGE_NOTE_LABEL": "Note",
